fix homepage spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -144,6 +144,7 @@ body {
 p {
   line-height: 1.6em;
   margin: 0 0 30px 0;
+  padding: 0 10px;
 }
 ul,
 ol {
@@ -186,6 +187,7 @@ h3 {
 h4 {
   font-size: 24px;
   font-size: 1.5rem;
+  padding: 0 5px;
 }
 h5 {
   font-size: 20px;
